Updated Contact Information

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 <div class="col-md-12">
                     <div class="block">
                         <h1 class="heading wow fadeInUp" data-wow-duration="300ms" data-wow-delay="300ms">our <span>MENU</span> the <span>PRICE</span></h1>
-                        <p class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="400ms">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco </p>
+                        <p class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="400ms"><b>Imagine a combination of tasty meals and the hospitable staff. This is exactly what Leaf 'n Beans provides you with. The spectacular service is something WE care about. Prices at this place claim to be attractive. Google users granted the score of 4.2 to this spot.</b></p>
                         <div class="pricing-list">
                             <div class="title">
                                 <h3>Featured <span>on the week</span></h3>
@@ -357,17 +357,17 @@
                         <div class="info">
                             <ul>
                                 <li>
-                                  <h4><i class="fa fa-phone"></i>Telefone</h4>
-                                  <p>(000) 123 456 78- (000) 123 4567 89</p>
+                                  <h4><i class="fa fa-phone"></i>Phone</h4>
+                                  <p>91-9439249945</p>
                                     
                                 </li>
                                 <li>
                                   <h4><i class="fa fa-map-marker"></i>Address</h4>
-                                  <p>2046 Blue Spruce Lane Laurel Canada</p>
+                                  <p>Near Income Tax Office, at Shelter Chhak, Cuttack</p>
                                 </li>
                                 <li>
                                   <h4><i class="fa fa-envelope"></i>E mail</h4>
-                                  <p>rest@gmail.com - rest@mail.ru</p>
+                                  <p>leafnbeanscafe@gmail.com</p>
                                   
                                 </li>
                             </ul>
