--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
             <div class="row">
                 <div class="col-md-12 col-sm-12">
                     <div class="block">
-                        <p>Copyright &copy; 2022. Leaf 'n Beans. All Rights Reserved. </p>
+                        <p>Copyright &copy; 2022. Leaf 'n Beans. All Rights Reserved. Design and Developed By <a href="https://twitter.com/_Csandeep">Sandeep Chatterjee</a></p>
                     </div>
                 </div>
             </div>
