Modified BevMenu to include the Sitelink

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                                 </div>
                             </li>
                         </ul>
-                        <a class="btn btn-default btn-more-info wow bounceIn" data-wow-duration="500ms" data-wow-delay="1200ms" href="#" role="button">More Info</a>
+                        <a class="btn btn-default btn-more-info wow bounceIn" data-wow-duration="500ms" data-wow-delay="1200ms" href="images/menu/bevmenu.pdf" role="button">More Info</a>
                     </div>
                 </div><!-- .col-md-12 close -->
             </div><!-- .row close -->
@@ -293,7 +293,7 @@
                                     </div>
                                 </li>
                             </ul>
-                            <a class="btn btn-default pull-right wow bounceIn" data-wow-duration="500ms" data-wow-delay="1200ms" href="#" role="button">More Info</a>
+                            <a class="btn btn-default pull-right wow bounceIn" data-wow-duration="500ms" data-wow-delay="1200ms" href="images/menu/bevmenu.pdf" role="button">More Info</a>
                         </div>
                     </div>
                 </div><!-- .col-md-12 close -->
@@ -458,7 +458,7 @@
             <div class="row">
                 <div class="col-md-12 col-sm-12">
                     <div class="block">
-                        <p>Copyright &copy; 2022. Leaf 'n Beans. All Rights Reserved. Design and Developed By <a href="https://twitter.com/_Csandeep">Sandeep Chatterjee</a></p>
+                        <p>Copyright &copy; 2022. Leaf 'n Beans. All Rights Reserved. Designed and Developed By <a href="https://twitter.com/_Csandeep">Sandeep Chatterjee</a></p>
                     </div>
                 </div>
             </div>
