--- a/index.html
+++ b/index.html
@@ -392,23 +392,51 @@
                 <div class="col-md-4">
                     <div class="block wow fadeInLeft"  data-wow-delay="700ms">
                     	<script>
-			    var url = 'https://leafnbeanscafe.github.io/';
-			    var updateGoSquared = function() {
-			    $.getJSON('https://api.gosquared.com/now/v3/pages?api_key=1FSQ8BK2OGGI1O3H&site_token=GSN-150894-J&href=' + encodeURIComponent(url), function(data) {
-			    setTimeout(updateGoSquared, 5000);
-			    $('#online-now').addClass('visible').find('.visitors').text(data.visitors);
-			   });
+			    const KEY = `ef9f1af2-bac5-11eb-8529-0242ac130003`;
+			    const NAMESPACE = "leafnbeanscafe.github.io";
+			    const COUNT_URL = `https://api.countapi.xyz`;
+
+			    const counter = document.querySelectorAll('span');
+
+			    const getCount = async () => {
+				const response = await fetch(`${COUNT_URL}/get/${NAMESPACE}/${KEY}`);
+				const data = await response.json();
+				setValue(data.value);
 			   };
-			   updateGoSquared();
+
+			   const incrementCount = async () => {
+	                   const response = await fetch(`${COUNT_URL}/hit/${NAMESPACE}/${KEY}`);
+			   const data = await response.json();
+			   setValue(data.value);
+			  };
+
+			  const setValue = (num) => {
+			  var str = num.toString().padStart(6, "0");
+			  for (let index = 0; index < str.length; index++) {
+				    const element = str[index];
+			            counter[index].innerHTML = element;
+			 }
+			 };
+
+			if (localStorage.getItem("hasVisited") == null) {
+				  incrementCount()
+				    .then(() => {
+				      localStorage.setItem("hasVisited", "true");
+			  })
+			 .catch((err) => console.log(err));
+			} else {
+			  getCount()
+			    .catch((err) => console.log(err));
+			}
                     	</script>
-                        <h3>CURRENTLY <span>ONLINE</span></h3>
-                        <div class="blog">
-                          <ul>
-                           <li>
-                           <p id="online-now" style=""><span class="visitors">0</span> people are currently viewing this page.</p>
-                           </li>
-                            </ul>                
-                        </div>
+                        <h3><span>UNIQUE VISITORS</span> TO THIS PAGE</h3>
+                         <div class="counter_center">
+      				<span>0</span>
+      				<span>0</span>
+      				<span>0</span>
+      				<span>0</span>
+      				<span>0</span>
+      			</div>
                     </div>
                 </div>
                 <!-- .col-md-4 close -->
