Updated Code for Visitor Count Display

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 			    const NAMESPACE = "leafnbeanscafe.github.io";
 			    const COUNT_URL = `https://api.countapi.xyz`;
 
-			    const counter = document.querySelectorAll('span');
+			    const counter = document.querySelectorAll('&nbsp;');
 
 			    const getCount = async () => {
 				const response = await fetch(`${COUNT_URL}/get/${NAMESPACE}/${KEY}`);
@@ -431,11 +431,7 @@
                     	</script>
                         <h3><span>UNIQUE VISITORS</span> TO THIS PAGE</h3>
                          <div class="counter_center">
-      				<span>0</span>
-      				<span>0</span>
-      				<span>0</span>
-      				<span>0</span>
-      				<span>0</span>
+      				&nbsp;0&nbsp;0&nbsp;0&nbsp;0&nbsp;0&nbsp;0
       			</div>
                     </div>
                 </div>
