--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
 			    .catch((err) => console.log(err));
 			}
                     	</script>
-                        <h3><span>UNIQUE VISITORS</span> TO THIS PAGE</h3>
+                        <h3><span>CUSTOMER VISITS</span> TO THIS PAGE</h3>
                          <div class="counter_center">
       				&nbsp;0&nbsp;0&nbsp;0&nbsp;0&nbsp;0&nbsp;0
       			</div>
