--- a/index.html
+++ b/index.html
@@ -414,7 +414,8 @@
 			  var str = num.toString().padStart(6, "0");
 			  for (let index = 0; index < str.length; index++) {
 				    const element = str[index];
-			            counter[index].innerHTML = element;
+			            //counter[index].innerHTML = element;
+			            counter[index] = element;
 			 }
 			 };
 
