Updated code to display visitor counts

--- a/index.html
+++ b/index.html
@@ -391,53 +391,15 @@
                 <!-- .col-md-4 close -->
                 <div class="col-md-4">
                     <div class="block wow fadeInLeft"  data-wow-delay="700ms">
-                    	<script>
-			    const KEY = `ef9f1af2-bac5-11eb-8529-0242ac130003`;
-			    const NAMESPACE = "leafnbeanscafe.github.io";
-			    const COUNT_URL = `https://api.countapi.xyz`;
-
-			    const counter = document.querySelectorAll('code');
-
-			    const getCount = async () => {
-				const response = await fetch(`${COUNT_URL}/get/${NAMESPACE}/${KEY}`);
-				const data = await response.json();
-				setValue(data.value);
-			   };
-
-			   const incrementCount = async () => {
-	                   const response = await fetch(`${COUNT_URL}/hit/${NAMESPACE}/${KEY}`);
-			   const data = await response.json();
-			   setValue(data.value);
-			  };
-
-			  const setValue = (num) => {
-			  var str = num.toString().padStart(5, "0");
-			  for (let index = 0; index < str.length; index++) {
-				    const element = str[index];
-			            counter[index].innerHTML = element;
-			            
-			 }
-			 };
-
-			if (localStorage.getItem("hasVisited") == null) {
-				  incrementCount()
-				    .then(() => {
-				      localStorage.setItem("hasVisited", "true");
-			  })
-			 .catch((err) => console.log(err));
-			} else {
-			  getCount()
-			    .catch((err) => console.log(err));
-			}
-                    	</script>
                         <h3><span>CUSTOMER VISITS</span> TO THIS PAGE</h3>
-                         <div class="counter_center">
-      				<code>0</code>
-      				<code>0</code>
-      				<code>0</code>
-      				<code>0</code>
-      				<code>0</code>
-      			</div>
+                         <div class="counter center">
+			      <code>0</code>
+			      <code>0</code>
+			      <code>0</code>
+			      <code>0</code>
+			      <code>0</code>
+    			</div>
+    			<script src="js/visitorcounter.js"></script>
                     </div>
                 </div>
                 <!-- .col-md-4 close -->
